--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,9 @@
 
     {{content-for "head"}}
 
+    <link integrity="" type="text/css" rel="stylesheet" href="{{rootURL}}assets/style.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/sudo-anypay-global.css">
+    <link integrity="" type='text/css' rel="stylesheet" href="{{rootURL}}assets/sudo-anypay-global.css">
 
     {{content-for "head-footer"}}
   </head>
